<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/saveCodeSelection"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom"
        android:title="@string/save_code_selection_title">
    </item>
    <!--
    options below may or may not be implemented in future version
         <item
        android:id="@+id/editCodeList"
        android:icon="@android:drawable/ic_action_edit"
        android:showAsAction="ifRoom"
        android:title="@string/edit_code_list_title">
    </item>
    -->
    <item
        android:id="@+id/settings"
        android:showAsAction="never"
        android:title="@string/settings_title">
    </item>
    <item
        android:id="@+id/hints"
        android:showAsAction="never"
        android:title="@string/hints_title">
    </item>
    <item
        android:id="@+id/help"
        android:showAsAction="never"
        android:title="@string/help_title">
    </item>

</menu>